--- a/Thi_ck/Thi_ck.vcxproj.filters
+++ b/Thi_ck/Thi_ck.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Ham.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Phuong_trinh_bac_hai.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Thu_vien.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Phuong_trinh_bac_hai.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
