--- a/Thi_ck/Thi_ck.vcxproj
+++ b/Thi_ck/Thi_ck.vcxproj
@@ -130,9 +130,11 @@
     <ClCompile Include="Ham.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Phuong_trinh_bac_hai.cpp" />
+    <ClCompile Include="smartHome_ham.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Phuong_trinh_bac_hai.h" />
+    <ClInclude Include="smartHome_struct.h" />
     <ClInclude Include="Thu_vien.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
